Fix alignment of text in cards section

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,10 @@ body {
     color: #F9FAF8;
 }
 
+/************************ HEADER **********************/
+
 .header {
-    padding: 0 100px 40px;
+    padding: 0 120px 40px;
 }
 
 .nav-bar {
@@ -26,10 +28,11 @@ body {
     margin-left: auto;
 }
 
-.header-bottom {
+.header-main {
     display: flex;
     flex-direction: row;
     gap: 10px;
+    margin: 100px 0;
 }
 
 .image-placeholder {
@@ -37,14 +40,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 80px;
+    padding: 100px;
     flex: 1 1 50%;
 }
 
+/************************ CARDS **********************/
+
 .card-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
 }
 
 .all-cards {
@@ -58,12 +61,14 @@ body {
     width: 100px;
 }
 
-.image {
+.card-image {
     width: 100px;
     height: 100px;
     border: 2px solid blue;
     border-radius: 10px;
 }
+
+/************************ QUOTE **********************/
 
 .quote-container {
     background-color: #E5E7EB;
@@ -75,10 +80,14 @@ body {
     text-align: right;
 }
 
+/************************ CALL TO ACTION **********************/
+
 .call-to-action {
     background-color: #3882F6;
     margin: 40px 80px;
 }
+
+/************************ FOOTER **********************/
 
 .footer {
     display: flex;
